// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterMap with initial state {"mapId":"foobar"} 1`] = `
Object {
  "mapId": "mapID",
}
`;

exports[`ResetMap with initial state {"mapId":"existingMapID"} 1`] = `
Object {
  "mapId": "",
}
`;
